--- a/src/niriswitcher/resources/style.css
+++ b/src/niriswitcher/resources/style.css
@@ -57,11 +57,10 @@ scrollbar slider {
   opacity: 1;
 }
 
+.application-icon:hover,
 .application-area.selected .application-icon {
     transition: background-color 0.1s ease-in;
     -gtk-icon-filter: brightness(110%);
-    /* padding: 10px 15px 4px; */
-    /* border: 1px solid rgba(44,44,44,0.95); */
     border-radius: 22px;
     background-color: rgba(99,99,99,0.95);
 }
