--- a/src/niriswitcher/resources/style.css
+++ b/src/niriswitcher/resources/style.css
@@ -101,7 +101,7 @@
 
 .application.focused .application-name {
   opacity: 1;
-  color: red;
+  color: rgba(255, 255, 255, 0.6);
 }
 
 .application.selected .application-icon {
